--- a/JavaScipt uczelnia/31.html
+++ b/JavaScipt uczelnia/31.html
@@ -11,6 +11,8 @@
     <p id="wynik"></p>
 
     <script>
+        /* Napisz program, który poprosi użytkownika o wprowadzenie liczby
+        i sprawdzi, czy jest ona liczbą pierwszą*/
         function czyPierwsza(n) {
             if (n < 2) return false;
             for (let i = 2; i <= Math.sqrt(n); i++) {
