--- a/JavaScipt uczelnia/32.html
+++ b/JavaScipt uczelnia/32.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script>
+        /* Napisz program, który wygeneruje tablicę z liczbami od 1 do 50, 
+        a następnie użyje pętli for...of do wyświetlenia tylko liczb parzystych.*/
         function Generowanie(){
             let a = [];
             for (let i = 1; i<=50;i++){
