--- a/JavaScipt uczelnia/33.html
+++ b/JavaScipt uczelnia/33.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script>
+        /*Napisz kod, który przy użyciu switch przypisze do zmiennej dayType
+    wartość "weekend" lub "weekday" na podstawie numeru dnia tygodnia. */
     var dayType = 1;
     
     switch(dayType){
