--- a/JavaScipt uczelnia/34.html
+++ b/JavaScipt uczelnia/34.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script>
+        /* Napisz program, który obliczy sumę wszystkich liczb podzielnych przez
+3 i 5 w zakresie od 1 do 100. */
     var i;
     var sum = 0;
     for(i=1; i<=100; i++){
