--- a/JavaScipt uczelnia/36.html
+++ b/JavaScipt uczelnia/36.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <script>
+        /* Napisz program, który utworzy obiekt z danymi użytkownika (name, age,
+email), a następnie za pomocą for...in wyświetli wszystkie klucze i wartości. */
         const user = {
     name: "Jan Kowalski",
     age: 30,
